# game

./: .copier-answers.yml  .flake8  .gitignore  .mypy.ini  .pylintrc  .tool-versions  INSTALL.md  LICENSE  README.md  dodo.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/assets/: 01-install.tape  03-Test-720.mov
.github/workflows/: ci_pipeline.yml
_example_code/: 11_animate_character.py  __init__.py  line_of_sight.py  pymunk_demo_top_down.py  sprite_rooms.py
docs/: CNAME  README.md  gen_ref_nav.py
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md
game/: __init__.py  character.py  main.py  map.py  play.py  registration.py
game/_example_code/: 11_animate_character.py  line_of_sight.py  pymunk_demo_top_down.py  sprite_rooms.py
game/assets/: Trees.json  [Base]BaseChip_pipo.json  items.json  map.json
game/assets/maps/: Rope.json  Trees.json  Wood.json  [A]Grass_pipo.json  [A]Water_pipo.json  items.json  map.json
game/core/: __init__.py  character.py  constants.py  end_game_menu.py  game_clock.py  game_gui.py  game_map.py  game_state.py  game_view.py  pause_menu.py  pressed_keys.py  registration.py  settings.py  window.py
game/core/gui/: __init__.py  inventory.py  main.py  message_box.py  rpg_movement.py
game/core/models/: __init__.py  base_player_inventory.py  entity_attr.py  sprite_state.py
game/core/view_strategies/: __init__.py  movement.py  raft_movement.py  rpg_movement.py
game/core/views/: __init__.py  animated_sprite.py  game_sprite.py  raft_sprite.py  rpg_sprites.py  vehicle_sprite.py
game/tasks/: __init__.py  task00_Hello_SOLID.py  task00_introduction.py  task01_S_player.py  task01_player.py  task01_s_select_player.py  task02_O_TBD.py  task02_o_inventory.py  task03_L_TBD.py  task03_l_crafting.py  task04_I_TBD.py  task04_i_the_raft.py  task05_D_TBD.py  task05_d_the_new_island.py
game/tasks/task01/: srp_introduction.py  task_s_select_character.py
game/tasks/task02/: ocp_introduction.py  task_o_equipped_item.py  task_o_inventory.py
game/tasks/task03/: lsp_introduction.py  task_l_crafting.py
game/tasks/task04/: isp_introduction.py  task_i_the_raft.py
game/tasks/task05/: dip_introduction.py  task_d_the_familiar.py  task_d_the_new_island.py
scripts/: check_imports.py
tests/: __init__.py  configuration.py  conftest.py  test_play.py  test_zz_game.py
tests/core/: stub_test_task.py  test_game_view.py  test_window.py
tests/core/models/: test_entity_attr.py  test_models.py
tests/core/view_strategies/: test_movement.py
