[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "game"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.poetry]
name = "game"
version = "0.0.1"
description = "Play the Design Patterns Island coding game!"
license = "MIT"
authors = ["Player1 <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/DesignPatternsAdventure/game"
documentation = "https://github.com/DesignPatternsAdventure/game"
readme = "README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DesignPatternsAdventure/game/issues"

[tool.poetry.dependencies]
python = "^3.10.5"
arcade = ">=2.6.16"

[tool.poetry.group.dev.dependencies]
pattern-feedback-tool = ">=0.1.1"
freezegun = "^1.2.2"
hypothesis = ">=6.56.4"
