[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
known_first_party = "reviewer_api"
known_third_party = ["alembic"]
multi_line_output = 3
profile = "black"

[tool.poetry]
name = "game"
version = "0.0.1"
description = "Play the Design Patterns Island coding game!"
license = "MIT"
authors = ["Player1 <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/DesignPatternsAdventure/game"
documentation = "https://github.com/DesignPatternsAdventure/game"
readme = "README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DesignPatternsAdventure/game/issues"

[tool.poetry.dependencies]
python = "^3.10.5"
arcade = ">=2.6.16"

[tool.poetry.group.dev.dependencies]
freezegun = ">=1.2.2"
hypothesis = ">=6.56.4"
pattern-feedback-tool = ">=0.3.9"
